<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.example.dalpoz.miniquiz.Activity_Home">

    <Button
        android:id="@+id/button_Inizia"
        android:layout_width="104dp"
        android:layout_height="63dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="40dp"
        android:elegantTextHeight="false"
        android:elevation="0dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/inizia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_materia" />

    <TextView
        android:id="@+id/textView_benvenuto"
        android:layout_width="366dp"
        android:layout_height="85dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/black_ops_one"
        android:gravity="center"
        android:text="@string/benvenuto_in_quizsuper"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Inseriscidati"
        android:layout_width="292dp"
        android:layout_height="44dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/black_ops_one"
        android:gravity="center"
        android:text="@string/inserisci_il_nome_giocatore"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_benvenuto" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Inseriscidati" />

    <TextView
        android:id="@+id/textView_InserisciMateria"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/black_ops_one"
        android:gravity="center"
        android:text="@string/scegli_la_materia"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Spinner
        android:id="@+id/spinner_materia"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:entries="@array/Materie"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_InserisciMateria" />

</android.support.constraint.ConstraintLayout>
