<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dalpoz.miniquiz.Activity_domande">

    <Button
        android:id="@+id/button_Avanti"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/salta"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_Falso"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/falso" />

    <ImageButton
        android:id="@+id/imageButton_Vero"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="55dp"
        android:layout_marginStart="44dp"
        android:background="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/textView_NomeGiocatore"
        android:layout_width="174dp"
        android:layout_height="27dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="NomeGiocatore"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toStartOf="@+id/textView_Punteggio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_domanda"
        android:layout_width="355dp"
        android:layout_height="241dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="Domanda"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Punteggio"
        android:layout_width="171dp"
        android:layout_height="27dp"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Punteggio"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_vero"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="44dp"
        android:fontFamily="@font/black_ops_one"
        android:gravity="center"
        android:text="@string/Vero"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_Vero"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_falso"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/black_ops_one"
        android:gravity="top|center_horizontal|center"
        android:text="@string/Falso"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_Falso"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/num_dom"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="192dp"
        android:fontFamily="@font/black_ops_one"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_vero"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
